# controllers/sellerController.go
@@ -1,1 +1,88 @@
 package controllers
+
+import (
+	"fmt"
+	"go-mall/models"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+// LoginUser godoc
+// @Summary Login as as user.
+// @Description Logging in to get jwt token to access admin or user api by roles.
+// @Tags Auth
+// @Param Body body LoginInput true "the body to login a user"
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /login [post]
+func LoginSeller(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+	var input LoginInput
+
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	u := models.Seller{}
+
+	u.Username = input.Username
+	u.Password = input.Password
+
+	token, err := models.LoginCheckSeller(u.Username, u.Password, db)
+
+	if err != nil {
+		fmt.Println(err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "username or password is incorrect."})
+		return
+	}
+
+	user := map[string]string{
+		"username": u.Username,
+		"email":    u.Email,
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "login success", "user": user, "token": token})
+
+}
+
+// Register godoc
+// @Summary Register a user.
+// @Description registering a user from public access.
+// @Tags Auth
+// @Param Body body RegisterInput true "the body to register a user"
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /register [post]
+func RegisterSeller(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+	var input RegisterInput
+
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	u := models.Seller{}
+
+	u.Username = input.Username
+	u.Email = input.Email
+	u.Password = input.Password
+
+	_, err := u.SaveUserSeller(db)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user := map[string]string{
+		"username": input.Username,
+		"email":    input.Email,
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "registration success", "user": user})
+
+}
